# rest-serializer-to-typescript

./: .gitignore  README.md  pyproject.toml  requirements.txt
rest_serializer_to_typescript/: __init__.py  apps.py  main.py  mapping.py  metadata.py  schema_generator.py  type_hinting_mapping.py
rest_serializer_to_typescript/management/commands/: serializer_to_ts.py
rest_serializer_to_typescript/tests/: schema.py  tests.py  transpiler.py
src/: type_hinting_mapping.py
src/tests/: tests.py
